test_programs/compile_failure/noirc_frontend_tests_indexing_array_with_non_u32_in_lvalue/src/main.nr

    fn main() {
        let index: u64 = 0;
        let mut array = [1, 2, 3];
        array[index] = 0;
    }
    